tried every fix for the overlapping but i then i decided to move the overlaping element behind the card element

--- a/portfolio/app/modules/userDefined/projects/projects.module.css
+++ b/portfolio/app/modules/userDefined/projects/projects.module.css
@@ -20,6 +20,7 @@
 }
 
 .moreProject {
+  z-index:-1;
   display: flex;
   justify-content: center;
   align-items: center;
